tests/samples/negative/core/local_shadow_import_alias.ax
module local_shadow_import_alias;

import shared.util as util;

fn main() -> i32 {
    let util = 1;
    return util;
}
